[package]
name = "includer_codegen"
version = "0.1.0"
authors = ["chip reed <chip@chip.sh>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://github.com/chippers/includer"
repository = "https://github.com/chippers/includer"
documentation = "https://docs.rs/includer_codegen"
categories = ["filesystem", "development-tools::build-utils"]
description = """
Built time helper for dynamically including assets at compile time
Typically results are used by the includer crate.
"""

[features]
web = []

[dependencies]
includer = {path = "../includer"}
walkdir = "2"
quote = "0.6"
syn = "0.14"
regex = "1"
proc-macro2 = "0.4.14"

[badges]
travis-ci = { repository = "chippers/includer" }
