[package]
name = "includer_codegen"
version = "0.2.0"
authors = ["chip reed <chip@chip.sh>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://github.com/chippers/includer/tree/master/includer_codegen"
repository = "https://github.com/chippers/includer"
documentation = "https://docs.rs/includer_codegen"
categories = ["filesystem", "development-tools::build-utils"]
description = "Dynamically include assets at build time through code generation."

[features]
default = ["web"]
web = []

[dependencies]
walkdir = "2"
quote = "0.6"
regex = "1"
proc-macro2 = "0.4"

[badges]
travis-ci = { repository = "chippers/includer" }
